--- a/docker-compose-jenkins.yml
+++ b/docker-compose-jenkins.yml
@@ -2,12 +2,12 @@ version: "3.9"
 services:
   jenkins:
     image: jenkins/jenkins:lts
-    privileged: true # Needed for Docker commands
+    privileged: true # Required for Docker commands
     ports:
       - "8080:8080"
     volumes:
       - jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock # bind host Docker
-      - /usr/bin/docker:/usr/bin/docker # optional, maps docker CLI
+      - /var/run/docker.sock:/var/run/docker.sock # Bind Docker socket
+      - /usr/bin/docker:/usr/bin/docker # Optional: maps Docker CLI
 volumes:
   jenkins_home:
